# agent-term

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
configs/: agent-term.example.json  agent-term.local.example.json
configs/fixtures/: agent-registry.local.example.json  matrix-sync.local.example.json  policy-fabric.local.example.json
docs/: operator-quickstart.md
docs/architecture/: agent-participant-authority.md  sourceos-control-surface.md
docs/integration/: agent-registry-boundary.md  holmes-boundary.md  network-native-assistant-events.md  office-plane-boundary.md
src/agent_term/: __init__.py  __main__.py  adapters.py  agent_registry.py  agent_registry_service.py  agentplane.py  cli.py  cloudshell_fog.py  config.py  dispatch_cli.py  events.py  health.py  health_cli.py  knowledge.py  matrix_adapter.py  matrix_cli.py  matrix_service.py  matrix_state.py  participants.py  pipeline.py  planes.py  store.py  (+5 more)
tests/: test_agent_registry.py  test_agent_registry_service.py  test_agentplane.py  test_cli.py  test_cloudshell_fog.py  test_config.py  test_dispatch_cli.py  test_dispatch_policy_fabric_service.py  test_events_store.py  test_health.py  test_health_cli.py  test_knowledge.py  test_matrix_adapter.py  test_matrix_cli.py  test_matrix_service.py  test_matrix_state.py  test_network_native_assistant_events.py  test_office_cli.py  test_operator_examples.py  test_participants.py  test_pipeline.py  test_planes.py  test_policy_fabric.py  test_policy_fabric_service.py  test_tui_model.py  test_workspace.py
