[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-term"
version = "0.1.0"
description = "Terminal-native Matrix-first ChatOps console for SourceOS multi-agent operations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "SourceOS-Linux" }
]
keywords = [
  "sourceos",
  "matrix",
  "chatops",
  "tui",
  "agents",
  "mcp",
  "agentplane",
  "policy-fabric",
  "sherlock"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: User Interfaces"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]
textual = [
  "textual>=0.58"
]
matrix = [
  "matrix-nio>=0.24"
]

[project.scripts]
agent-term = "agent_term.cli:main"
agent-term-dispatch = "agent_term.dispatch_cli:main"
agent-term-snapshot = "agent_term.snapshot_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
